<resources>
    <string name="app_name">CoviCare</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="preventions">
        Protect yourself and others around by knowing facts and taking appropriate precautions. Follow advice provided by your local health authority.
    </string>

    <string name="social_distance">
        Try to stay at least 2 metres (3 steps) away from anyone you do not live with.
    </string>

    <string name="bersin">
        If you sneeze you should use your elbow to cover your mouth.
    </string>

    <string name="rumah">
        Stay home if you do not have important needs and do not fell unwell.
    </string>

    <string name="cuci_baju">
        Clean your hands often. Use soap and water, or alcohol-based hand rub.
    </string>

    <string name="topeng">
        Wear a mask when physical distancing is not possible.
    </string>

    <string name="crowded">
        Limit social gatherings and time spent in crowded places.
    </string>

    <string name="sanitasi">
        Clean and disinfect frequently touched objects and surfaces.
    </string>

    <string name="symptoms">
        COVID-19 affects different people in different ways. Most infected people will develop mild to moderate illness and recover without hospitalization.
    </string>

    <string name="fever">
        A fever is a temporary increase in your body temperature, often due to an illness. Having a fever is a sign that something out of the ordinary is going on in your body.
    </string>

    <string name="dry_cough">
        A dry cough is a cough that does not bring up mucus. It may feel like you have a tickle in the back of your throat triggering your cough reflex, giving you hacking coughs.
    </string>

    <string name="headache">
        Headache  is the symptom of pain in the face, head, or neck. It can occur as a migraine, tension-type headache, or cluster headache. Frequent headaches can affect relationships and employment.
    </string>

    <string name="shortness_of_breath">
        Shortness of breath or commonly known medically as dyspnea is often described as a feeling of tightness in the chest. hunger for air, difficulty breathing, shortness of breath or a feeling of suffocation.
    </string>

    <string name="foods_atas">
        Food is the first way that can be done by everyone as an effort to increase immunity and prevent the transmission of coronavirus. here are some endurance-enhancing foods :
    </string>

    <string name="foods_bawah">
        Endurance is one of the keys to prevent coronavirus attacks. Endurance-enhancing foods are mostly like fruits and vegetables. In addition, there are endurance-enhancing foods that can also be sourced from other ingredients.
    </string>

    <string name="exercise_atas">
        Sports during the Covid-19 pandemic are not impossible. In fact, exercise should be encouraged to maintain more body fitness. A fit and healthy body will be more difficult to enter the virus because of its stronger immune system. here are some exercises that can help your bodys health :
    </string>

    <string name="exercise_bawah">
        Pandemic is not an obstacle to exercise, but it can provide additional motivation because it can help improve fitness. In addition to the above options, you can also exercise outdoors. But of course sports in the middle of the pandemic must pay attention to the protocol of corona virus prevention.
    </string>

    <string name="about">
        CoviCare is an application that provides information related to how to prevent the Covid-19 virus also the statistical data on the spread of the virus in Indonesia every day. There is also a list of refferral hospitals for Covid-19 patients.
    </string>

    <string name="namateam">
        <li>
            \n
            <ol>Fahri Darmawan</ol>\n
            <ol>Syahrial Akbar Muzakki</ol>\n
            <ol>Muhammad Fadly</ol>\n
            <ol>Muhammad Nauval Sesario</ol>\n
            <ol>Dirga Nugrah Putra</ol>
        </li>
    </string>

    <string name="npmteam">
        <li>
            \n
            <ol>4518210001</ol>\n
            <ol>4518210012</ol>\n
            <ol>4518210029</ol>\n
            <ol>4518210041</ol>\n
            <ol>4518210075</ol>
        </li>
    </string>

</resources>