<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsActivity"
    android:background="@drawable/about_us"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/backbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:background="@android:color/transparent"
        android:layout_marginStart="80px"
        android:layout_marginTop="110px"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textAlignment="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/lato_regular"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="The Developers"
            android:textAlignment="center"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginTop="20dp"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignBounds"
            android:layout_marginTop="-25dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:rowCount="1"
            android:columnCount="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/namateam"
                    android:fontFamily="@font/lato_regular"
                    android:textSize="16sp"
                    android:textAlignment="viewEnd"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/npmteam"
                    android:gravity="right"
                    android:fontFamily="@font/lato_regular"
                    android:textSize="16sp"/>
            </LinearLayout>

        </GridLayout>

    </LinearLayout>




</LinearLayout>