<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SymptomsActivity"
    android:orientation="vertical"
    android:background="@drawable/group_symptoms">

    <ImageButton
        android:id="@+id/backbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:background="@android:color/transparent"
        android:layout_marginStart="80px"
        android:layout_marginTop="110px"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/symptoms"
        android:layout_marginTop="100px"
        android:layout_marginStart="20px"
        android:layout_marginEnd="20px"
        android:textAlignment="center"
        android:textSize="16sp"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/colorPrimary"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20px">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:rowCount="4"
            android:columnCount="1">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_rowWeight="2"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_vertical"
                        android:layout_centerVertical="true"
                        android:src="@drawable/symp1" />

                    <TextView
                        android:id="@+id/title_symp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Fever"
                        android:fontFamily="@font/lato_bold"
                        android:layout_toEndOf="@id/logo"
                        android:layout_marginStart="30px"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fever"
                        android:fontFamily="@font/lato_regular"
                        android:layout_toEndOf="@id/logo"
                        android:layout_below="@id/title_symp"
                        android:layout_marginStart="30px"
                        android:justificationMode="inter_word"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_rowWeight="2"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/logo1"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_vertical"
                        android:layout_centerVertical="true"
                        android:src="@drawable/symp2" />

                    <TextView
                        android:id="@+id/title_symp1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dry Cough"
                        android:fontFamily="@font/lato_bold"
                        android:layout_toEndOf="@id/logo1"
                        android:layout_marginStart="30px"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dry_cough"
                        android:fontFamily="@font/lato_regular"
                        android:layout_toEndOf="@id/logo1"
                        android:layout_below="@id/title_symp1"
                        android:layout_marginStart="30px"
                        android:justificationMode="inter_word"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_rowWeight="2"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/logo2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_vertical"
                        android:layout_centerVertical="true"
                        android:src="@drawable/symp3" />

                    <TextView
                        android:id="@+id/title_symp2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Headache"
                        android:fontFamily="@font/lato_bold"
                        android:layout_toEndOf="@id/logo2"
                        android:layout_marginStart="30px"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/headache"
                        android:fontFamily="@font/lato_regular"
                        android:layout_toEndOf="@id/logo2"
                        android:layout_below="@id/title_symp2"
                        android:layout_marginStart="30px"
                        android:justificationMode="inter_word"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_rowWeight="2"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/logo3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_vertical"
                        android:layout_centerVertical="true"
                        android:src="@drawable/symp4" />

                    <TextView
                        android:id="@+id/title_symp3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Shortness of Breath"
                        android:fontFamily="@font/lato_bold"
                        android:layout_toEndOf="@id/logo3"
                        android:layout_marginStart="30px"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shortness_of_breath"
                        android:fontFamily="@font/lato_regular"
                        android:layout_toEndOf="@id/logo3"
                        android:layout_below="@id/title_symp3"
                        android:layout_marginStart="30px"
                        android:justificationMode="inter_word"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </ScrollView>

</LinearLayout>